testsuite/tests/typecheck/should_fail/T8912.stderr

T8912.hs:7:10: error:
    • Illegal implicit parameter ‘?imp::Int’
    • In the instance declaration for ‘C [a]’
